<resources>
    <string name="app_name">Group12_HW4</string>
    <string name="welcome_la">Welcome to Trivia App</string>
    <string name="exit_v">Exit</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="tri_image_label">Trivia Ready</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="corr_ans_label">Correct answers</string>
    <string name="perfor_label">Your performance:</string>
    <string name="finish_label">Finish</string>
    <string name="load">Loading image</string>
</resources>
