<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ranga.group12_hw4.MainActivity">

    <TextView
        android:text="@string/welcome_la"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <Button
        android:text="@string/exit_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginBottom="32dp"
        android:id="@+id/exit"
        android:textAllCaps="false" />

    <Button
        android:text="@string/start_trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:id="@+id/start_trivia"
        android:textAllCaps="false"
        android:layout_alignBaseline="@+id/exit"
        android:layout_alignBottom="@+id/exit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/triviaImage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:visibility="visible" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trivia"
        android:layout_marginTop="65dp"
        android:id="@+id/triviaImage"
        android:visibility="invisible"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:text="@string/tri_image_label"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/triviaready"
        android:layout_alignBottom="@+id/triviaImage"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/triviaready"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/loadTriID" />

</RelativeLayout>
