<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ranga.group12_hw4.TriviaActivity">

    <TextView
        android:id="@+id/timeleft"
        android:layout_height="40dp"
        android:layout_width="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/prevID"
        android:layout_alignRight="@+id/imagePerQuestion"
        android:layout_alignEnd="@+id/imagePerQuestion"
        android:id="@+id/nextBID" />

    <TextView
        android:layout_height="40dp"
        android:id="@+id/questionNoID"
        android:layout_width="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_height="100dp"
        app:srcCompat="@android:color/background_light"
        android:id="@+id/imagePerQuestion"
        android:layout_width="240dp"
        android:layout_below="@+id/timeleft"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/question"
        android:layout_alignLeft="@+id/question"
        android:layout_alignStart="@+id/question" />

    <Button
        android:text="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:id="@+id/prevID"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imagePerQuestion"
        android:layout_alignStart="@+id/imagePerQuestion" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pgimage"
        android:layout_alignTop="@+id/imagePerQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:text="TextView"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:layout_width="300dp"
        android:layout_below="@+id/imagePerQuestion"
        android:layout_toRightOf="@+id/questionNoID"
        android:layout_toEndOf="@+id/questionNoID" />

    <TextView
        android:text="@string/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/load"
        android:layout_below="@+id/pgimage"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
