<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ranga.group12_hw4.StatsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="17dp"
        android:layout_height="250dp"
        android:layout_below="@+id/correctAnswersID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollViewID">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/correctAnswersID"
        android:text="@string/corr_ans_label"
        android:textColor="@android:color/background_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <TextView
        android:text="@string/perfor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/performanceTVID"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:layout_below="@+id/scrollViewID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/performanceTVID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/performanceTVID"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight=".80"
            android:max="100"
            android:id="@+id/progressBar2"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_weight="0.08"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
             android:id="@+id/perf_value"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <Button
        android:text="@string/finish_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:id="@+id/finish_in_stats" />
</RelativeLayout>
